# NestRS

./: .dockerignore  .env  .env.development  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  NOTES.md  README.md  ROADMAP.md  SECURITY.md  db.just
.cargo/: audit.toml
.claude/rules/: authn-authz.md  data-layer.md  framework.md  request-layers.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs-pages.yml  publish.yml
apps/api/: Cargo.toml  schema.graphql
apps/assistant/: Cargo.toml
apps/auth/: Cargo.toml
apps/chat/: Cargo.toml
apps/hello/: Cargo.toml
apps/live/: Cargo.toml
apps/mcp/: Cargo.toml
apps/platform-api/: Cargo.toml
apps/platform-auth/: Cargo.toml
apps/platform-worker/: Cargo.toml
apps/publish-live/: Cargo.toml
apps/worker/: Cargo.toml
crates/features/: Cargo.toml
crates/identity/: Cargo.toml
crates/identity/src/: constants.rs  lib.rs
crates/migrations/: Cargo.toml
crates/nest-rs/: Cargo.toml  README.md
crates/nest-rs-authn/: Cargo.toml  README.md
crates/nest-rs-authz/: Cargo.toml  README.md
crates/nest-rs-cli/: Cargo.toml  README.md
crates/nest-rs-codegen/: README.md
crates/nest-rs-config/: Cargo.toml  README.md
crates/nest-rs-config-macros/: README.md
crates/nest-rs-core/: README.md
crates/nest-rs-core-macros/: README.md
crates/nest-rs-database/: Cargo.toml  README.md
crates/nest-rs-events/: Cargo.toml  README.md
crates/nest-rs-events-macros/: README.md
crates/nest-rs-exception-filters/: Cargo.toml  README.md
crates/nest-rs-exception-filters/src/: builder.rs  erased.rs  exception.rs  lib.rs  registry.rs
crates/nest-rs-filters/: Cargo.toml  README.md
crates/nest-rs-graphql/: Cargo.toml  README.md
crates/nest-rs-graphql-macros/: README.md
crates/nest-rs-guards/: Cargo.toml  README.md
crates/nest-rs-health/: Cargo.toml  README.md
crates/nest-rs-health-macros/: README.md
crates/nest-rs-http/: Cargo.toml  README.md
crates/nest-rs-http-macros/: README.md
crates/nest-rs-interceptors/: Cargo.toml  README.md
crates/nest-rs-interceptors/src/: builder.rs  ext.rs  interceptor.rs  lib.rs  registry.rs
crates/nest-rs-macros/: README.md
crates/nest-rs-mcp/: Cargo.toml  README.md
crates/nest-rs-mcp-macros/: README.md
crates/nest-rs-openapi/: README.md
crates/nest-rs-opentelemetry/: Cargo.toml  README.md
crates/nest-rs-pipes/: Cargo.toml  README.md
crates/nest-rs-queue/: Cargo.toml  README.md
crates/nest-rs-queue-macros/: README.md
crates/nest-rs-redis/: Cargo.toml  README.md
crates/nest-rs-redis/src/: config.rs  connection.rs  error.rs  lib.rs  module.rs
crates/nest-rs-redis/src/throttler/: mod.rs  module.rs  store.rs
crates/nest-rs-redis/src/worker/: mod.rs  module.rs
crates/nest-rs-redis/tests/: worker.rs
crates/nest-rs-resource/: Cargo.toml  README.md
crates/nest-rs-resource-macros/: Cargo.toml  README.md
crates/nest-rs-schedule/: README.md
crates/nest-rs-schedule-macros/: README.md
crates/nest-rs-seaorm/: Cargo.toml  README.md
crates/nest-rs-server-timing/: Cargo.toml  README.md
crates/nest-rs-social/: Cargo.toml  README.md
crates/nest-rs-storage/: Cargo.toml  README.md
crates/nest-rs-testing/: Cargo.toml  README.md
crates/nest-rs-throttler/: Cargo.toml  README.md
crates/nest-rs-worker/: README.md
crates/nest-rs-ws/: Cargo.toml  README.md
crates/nest-rs-ws-macros/: README.md
crates/nestrs-authn/: Cargo.toml  README.md
crates/nestrs-authz/: Cargo.toml
crates/nestrs-authz-graphql/: Cargo.toml
crates/nestrs-authz-http/: Cargo.toml
crates/nestrs-authz-ws/: Cargo.toml
crates/nestrs-config/: Cargo.toml  README.md
crates/nestrs-core/: Cargo.toml
crates/nestrs-database/: Cargo.toml  README.md
crates/nestrs-events/: Cargo.toml  README.md
crates/nestrs-events-macros/: Cargo.toml
crates/nestrs-events/src/: bus.rs  handler.rs  lib.rs  meta.rs  module.rs
crates/nestrs-events/tests/: bus.rs
crates/nestrs-graphql/: Cargo.toml  README.md
crates/nestrs-graphql-cli/: Cargo.toml
crates/nestrs-graphql-macros/: Cargo.toml
crates/nestrs-graphql-macros/src/: crud.rs  dataloader.rs  lib.rs  resolver.rs
crates/nestrs-health/: README.md
crates/nestrs-http/: Cargo.toml  README.md
crates/nestrs-http-macros/: Cargo.toml
crates/nestrs-http-macros/src/: controller.rs  crud.rs  interceptor.rs  lib.rs  routes.rs
crates/nestrs-macro-support/: Cargo.toml
crates/nestrs-macro-support/src/: lib.rs
crates/nestrs-mcp/: Cargo.toml
crates/nestrs-mcp-macros/: Cargo.toml
crates/nestrs-mcp-macros/src/: lib.rs  mcp.rs
crates/nestrs-middleware/: Cargo.toml
crates/nestrs-middleware/src/: ext.rs  filter.rs  guard.rs  interceptor.rs  lib.rs
crates/nestrs-opentelemetry/: README.md
crates/nestrs-orm/: Cargo.toml
crates/nestrs-queue/: Cargo.toml  README.md
crates/nestrs-queue-macros/: Cargo.toml
crates/nestrs-queue-macros/src/: lib.rs  processor.rs
crates/nestrs-queue/src/: config.rs  connection.rs  consumer.rs  lib.rs  method.rs  module.rs  processor.rs  worker.rs  worker_module.rs
crates/nestrs-queue/tests/: worker.rs
crates/nestrs-redis/: Cargo.toml  README.md
crates/nestrs-redis/src/: connection.rs  lib.rs  worker.rs
crates/nestrs-redis/tests/: worker.rs
crates/nestrs-schedule/: Cargo.toml
crates/nestrs-schedule-macros/: Cargo.toml
crates/nestrs-schedule/src/: inventory.rs  lib.rs  module.rs  scheduler.rs
crates/nestrs-schedule/tests/: end_to_end.rs  scheduler.rs
crates/nestrs-seaorm/: Cargo.toml  README.md
crates/nestrs-server-timing/: Cargo.toml  README.md
crates/nestrs-server-timing/src/: entry.rs  format.rs  interceptor.rs  lib.rs
crates/nestrs-telemetry/: Cargo.toml
crates/seed/: Cargo.toml
crates/seed/src/: runner.rs
crates/seed/src/factories/: user.rs
crates/seed/tests/: e2e.rs
demo/: .env  .env.development  .env.example  Cargo.toml  Dockerfile  Justfile  README.md  test.just
docs/: README.md  astro.config.mjs  package-lock.json  package.json
(+1012 files in other folders)
