[package]
name = "identity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Shared identity contract — the JWT claims + roles the auth app signs and the api app verifies."

[dependencies]
serde.workspace = true
schemars.workspace = true
uuid.workspace = true
