[package]
name = "nest-rs-exception-filters"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "NestJS-style exception filters for nestrs — catches typed errors (the `@Catch(...)` analog) and maps them to responses; distinct from the unconditional error-mapping `Filter`."

[dependencies]
async-trait.workspace = true
poem.workspace = true
nest-rs-core.workspace = true
