[package]
name = "nest-rs-exception-filters"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Typed exception filters for nestrs — each filter declares the concrete error it claims and only catches matching errors; distinct from the unconditional error-mapping `Filter`."

[dependencies]
async-trait.workspace = true
poem.workspace = true
nest-rs-core.workspace = true
