[package]
name = "nest-rs-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Redis-backed queue integration for nest-rs-queue (via apalis-redis): the QueueConnection producer, the QueueWorker consumer transport, and the #[processor] decorator re-export. The user-facing storage is Redis; apalis is an implementation detail."


[dependencies]
nest-rs-core.workspace = true
# The abstractions: `Job`, `Processor`, `ProcessMethod`, the `JobProducer`
# seam, and (re-exported through it) the `#[processor]` macro. Application
# code reaches both this crate's Redis types AND the abstractions through
# the same import root by depending on `nest-rs-queue` + `nest-rs-redis`.
nest-rs-queue.workspace = true
# `QueueModule` owns its `#[config]` `QueueConfig` (namespace `queue`), loaded
# from `NESTRS_QUEUE__*`; `validator` backs its `#[validate]` rules.
nest-rs-config.workspace = true
validator.workspace = true
async-trait.workspace = true
anyhow.workspace = true
# Typed `ConnectionError` for the Redis backend (the producer surface speaks
# `nest_rs_queue::QueueError`); framework crates surface `thiserror`, not `anyhow`.
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
apalis = { workspace = true, features = ["retry", "timeout", "catch-panic"] }
apalis-redis.workspace = true
# `throttler` feature only: the shared `dyn ThrottlerStore` seam + config types
# reused verbatim (the guard is transport-agnostic; only the backing store
# changes). `redis` (same 0.32 line apalis-redis pins, so one connection type)
# runs the atomic fixed-window Lua script over `QueueConnection::manager()`.
nest-rs-throttler = { workspace = true, optional = true }
redis = { version = "0.32", optional = true, default-features = false, features = [
    "aio",
    "connection-manager",
    "script",
    "tokio-comp",
] }

[features]
# A second Redis use — a cross-process rate-limit store — as a feature on this
# one integration home, per the crate's future-expansion note. Off by default:
# producer/consumer apps that never rate-limit pull neither `redis` nor
# `nest-rs-throttler`.
throttler = ["dep:nest-rs-throttler", "dep:redis"]

[dev-dependencies]
nest-rs-core = { path = "../nest-rs-core" }
# The `#[processor]` macro emits `::nest_rs_worker::*` paths and the test
# implements `JobContext` directly.
nest-rs-worker = { path = "../nest-rs-worker" }
# Per-argument pipe on a `#[process]` job argument (`Piped<P, T>` / `Valid<T>`).
nest-rs-pipes = { path = "../nest-rs-pipes" }
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
tower = "0.5"

[lints]
workspace = true
