[package]
name = "nestrs-graphql-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "GraphQL decorator macros for nestrs (#[graphql], #[resolver]). Re-exported by nestrs-graphql."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
nestrs-macro-support.workspace = true
