[package]
name = "nestrs-http-macros"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "HTTP decorator macros for nestrs (#[controller], #[routes], verb attributes, #[interceptor]). Re-exported by nestrs-http."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
nestrs-macro-support.workspace = true
