[package]
name = "nestrs-macro-support"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Shared syn/quote helpers for building nestrs decorator macros, used by every nestrs `*-macros` crate (and available to third-party ones)."

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
