[package]
name = "nestrs-queue-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Internal — the #[processor] decorator macro for nestrs-queue; re-exported by backend integrations (nestrs-redis, …), not a direct dependency."

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
