[package]
name = "nestrs-redis"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Redis-backed queue integration for nestrs-queue (via apalis-redis): the QueueConnection producer, the QueueWorker consumer transport, and the #[processor] decorator re-export. The user-facing storage is Redis; apalis is an implementation detail."

[dependencies]
nestrs-core.workspace = true
# The abstractions: `Job`, `Processor`, `ProcessMethod`, the `JobProducer`
# seam, and (re-exported through it) the `#[processor]` macro. Application
# code reaches both this crate's Redis types AND the abstractions through
# the same import root by depending on `nestrs-queue` + `nestrs-redis`.
nestrs-queue.workspace = true
# `QueueModule` owns its `#[config]` `QueueConfig` (namespace `queue`), loaded
# from `NESTRS_QUEUE__*`; `validator` backs its `#[validate]` rules.
nestrs-config.workspace = true
validator.workspace = true
async-trait.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
apalis = { workspace = true, features = ["retry", "timeout", "catch-panic"] }
apalis-redis.workspace = true

[dev-dependencies]
nestrs-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
async-trait.workspace = true
tower = "0.5"
