[package]
name = "nestrs-schedule"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Discovered cron-style scheduled jobs for nestrs: the #[scheduled] decorator plus a ScheduleModule that auto-attaches the Scheduler."

[dependencies]
nestrs-core.workspace = true
nestrs-schedule-macros.workspace = true
async-trait.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
croner.workspace = true
chrono.workspace = true
chrono-tz.workspace = true

[dev-dependencies]
# Raising SIGINT to exercise App::run's graceful-shutdown path end-to-end.
libc = "0.2"
