[package]
name = "nestrs-server-timing"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "W3C Server-Timing response header interceptor for nestrs apps (independent of OpenTelemetry)."

[dependencies]
nestrs-core.workspace = true
nestrs-http.workspace = true
nestrs-middleware.workspace = true
poem.workspace = true
async-trait.workspace = true
# Per-request entry accumulator lock — poison-free locking.
parking_lot.workspace = true
